--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
         "@popperjs/core": "^2.11.8",
         "@tailwindcss/vite": "^4.1.3",
         "bootstrap": "^5.3.5",
-        "flowbite": "^3.1.2"
+        "flowbite": "^3.1.2",
+        "laravel-echo": "^2.0.2",
+        "pusher-js": "^8.4.0"
     }
 }
